fix responsiveness on mobile and tablet

--- a/main.css
+++ b/main.css
@@ -42,13 +42,23 @@ nav {
   display: flex;
   flex-wrap: nowrap;
   width: 300px;
+  height: 30px;
+  margin-top: 15px;
+  align-items: center;
+
+}
+
+#searchBox {
+  border: 1px solid white;
+  color: white;
+  height: 100%;
+  margin-top: 10px;
 }
 
 .wrap-icon {
   background-color: #323232;
   display: flex;
   align-items: center;
-  align-self: center;
   margin-left: 0;
 }
 
@@ -67,6 +77,10 @@ nav {
 main {
   grid-column: 1 / span 2;
   width: 100%;
+}
+
+#mainVideo {
+  max-height: 80vh;
 }
 
 #share {
@@ -100,6 +114,7 @@ aside {
 .thumbnail {
   display: grid;
   grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
   column-gap: 10px;
   align-items: center;
   margin-bottom: 2%;
@@ -111,6 +126,10 @@ footer {
   width: 90%;
 }
 
+#comment {
+  color: white;
+}
+
 @media (min-width: 800px) {
   main {
     grid-column: 1;
@@ -118,6 +137,7 @@ footer {
   }
   aside {
     grid-column: 2;
+    grid-row: 2 / span 2;
   }
   footer {
     grid-column: 1;
